NOT ENOUGH SAND OFFICIAL CHANGELOG
By ElectroNikkel

1.4.1: Useful Compatibility Update

- Added compatibility with Useful Stuff (Supresses their sand block from stones. Seriously, that is way too OP).

1.4.0: Saul Goodman Update.

- Added the GNU GENERAL PUBLIC LICENSE file to the mod, binding it to that legality.
- GitHub backup added. Link here: https://github.com/SNikolaBogdanic/not-enough-sand-0
- Added CHANGELOG file to keep track of changes more easily.
- Added compatibility with Expanded Matter Mod (https://mods.vintagestory.at/em)


1.3.3: Fix and Flex 1 Update.

- Small visual tweaks.
- 2 limestone or chalk pebbles gives 2 lime, consuming a single hammer durability.
- Fixed a bug where you couldn't craft pebbles from stones and a hammer.


1.3.2: Pebbles Tweaks Update.

- Added the chance of pebbles dropping from mined rocks and minerals (Albeit not gems, for some reason, I think).
- Pebbles now can be stored in a Mining Bag.
- Tweaked the Fire, Red and Brown Clay panning chances (0.6%, 1.5% and 1.5% respectively).


1.3.1: Integration 1 Update.

- Now this mod is compatible with "More Clay".( https://mods.vintagestory.at/moreclay ).
- Added crafting of Red Clay with Bauxite Dust.
- Added crafting of Brown Clay with Chert Dust.
- Bauxite cannot be used to craft Fire Clay anymore.


1.3.0: Pebbles and Dusts Update.

- Tweaked the recipes for Clay yet again. Now, a single rock dust and a liter of water in a barrel will grant you a unit of blue/fire clay (Depending of the rock) after 8 hours.
- Shale, slate and phyllite dusts will grant you Blue Clay. Claystone, Sandstone and Bauxite dusts will give you Fire Clay instead.
- Added Stone Pebbles and Stone Dusts to craft Gravel and Clay (with water) respectively.
- Crushed Stones can be used to make Sand again directly.
- Changed the price of Sand and Gravel to 4 Crushed Stone and 4 Pebbles respectively.
- Shale cannot be grinded now.