@@ -1,27 +1,27 @@
 {
-	code: "crushed-ore",
-	heldTpIdleAnimation: "holdbothhands",
-	variantgroups: [
-		{ code: "material", states: ["andesite", "basalt", "chert", "claystone", "conglomerate", "phyllite", "sandstone", "shale", "slate"] }
+	"code": "crushed-ore",
+	"heldTpIdleAnimation": "holdbothhands",
+	"variantgroups": [
+		{ "code": "material", "states": ["andesite", "basalt", "chert", "claystone", "conglomerate", "phyllite", "sandstone", "shale", "slate"] }
 	],
-	attributes: {
-		handbook: {
-			groupBy: ["crushed-*"],
-			extraSections: [
-				{ title: "handbooktitle-crushed", text: "handbooktext-crushed" }
+	"attributes": {
+		"handbook": {
+			"groupBy": ["crushed-*"],
+			"extraSections": [
+				{ "title": "handbooktitle-crushed", "text": "handbooktext-crushed" }
 			]
 		},
 		displaycaseable: true, 
 		shelvable: true,
 		dissolveInWater: true,
 		onDisplayTransform: {
-			translation: { x: 0.05, y: 0, z: 0 },
-			origin: { x: 0.5, y: 0, z: 0.5 },
+			translation: { "x": 0.05, "y": 0, "z": 0 },
+			origin: { "x": 0.5, "y": 0, "z": 0.5 },
 			scale: 0.65
 		}
 	},
-	shape: { base: "game:item/resource/crushed/crushed" },
-	texture: { base: "item/resource/crushed/{material}" },
+	"shape": { "base": "game:item/resource/crushed/crushed" },
+	"texture": { "base": "item/resource/crushed/{material}" },
 
 	"grindingPropsByType": {
 		"*-*": {
@@ -31,14 +31,14 @@
 
 	"crushingPropsByType": {
 		"*-*": {
-			"crushedStack": { "type": "item", "code": "powdered-ore-{material}", "stacksize": 2},
+			"crushedStack": { "type": "item", "code": "powdered-ore-{material}", "stacksize": 2 },
 			"hardnessTier": 1
 		}
 	},
 
-	creativeinventory: { "general": ["*"], "items": ["*"] },
-	maxstacksize: 64,
-	materialDensity: 500,
+	"creativeinventory": { "general": ["*"], "items": ["*"] },
+	"maxstacksize": 64,
+	"materialDensity": 500,
 	"guiTransform": {
 		"translation": { "x": 3, "y": 1, "z": -25 },
 		"rotation": { "x": 158, "y": 22, "z": 3 },
