@@ -1,8 +1,8 @@
 {
-	code: "pebbles",
-	heldTpIdleAnimation: "holdbothhands",
-	variantgroups: [
-		{ code: "material", states: ["andesite", "limestone", "chalk", "basalt", "bauxite", "chert", "claystone", "conglomerate",
+	"code": "pebbles",
+	"heldTpIdleAnimation": "holdbothhands",
+	"variantgroups": [
+		{ "code": "material", states: ["andesite", "limestone", "chalk", "basalt", "bauxite", "chert", "claystone", "conglomerate",
 		"granite", "peridotite", "phyllite", "sandstone", "shale", "slate"] }
 	],
 	attributes: {
@@ -15,83 +15,83 @@
 		}
 	},
 	shape: { base: "item/resource/pebbles" },
-	texture: { base: "game:block/stone/rock/{material}1" },
+	"texture": { base: "game:block/stone/rock/{material}1" },
 	"storageFlags": 5,
 	"grindingPropsByType": {
 		
 		"*-limestone": {
-			grindedStack: { type: "item", code: "game:lime", stacksize: 1 }
+			"grindedStack": { "type": "item", "code": "game:lime", "stacksize": 1 }
 		},
 		"*-chalk": {
-			grindedStack: { type: "item", code: "game:lime", stacksize: 1 }
+			"grindedStack": { "type": "item", "code": "game:lime", "stacksize": 1 }
 		}
 	},
 
 	"crushingPropsByType": {
 		"*-andesite": {
-			"crushedStack": { type: "item", code: "crushed-ore-andesite", stacksize: 1 },
+			"crushedStack": { "type": "item", "code": "crushed-ore-andesite", "stacksize": 1 },
 			"hardnessTier": 3
 		},
 		"*-basalt": {
-			crushedStack: { type: "item", code: "crushed-ore-basalt", stacksize: 1 },
-			hardnessTier: 3
+			"crushedStack": { "type": "item", "code": "crushed-ore-basalt", "stacksize": 1 },
+			"hardnessTier": 3
 		},
 		"*-bauxite": {
-			crushedStack: { type: "item", code: "game:crushed-bauxite", stacksize: 1 },
-			hardnessTier: 2
+			"crushedStack": { "type": "item", "code": "game:crushed-bauxite", "stacksize": 1 },
+			"hardnessTier": 2
 		},
 		"*-chert": {
-			crushedStack: { type: "item", code: "crushed-ore-chert", stacksize: 1 },
-			hardnessTier: 3
+			"crushedStack": { "type": "item", "code": "crushed-ore-chert", "stacksize": 1 },
+			"hardnessTier": 3
 		},
 		"*-claystone": {
-			crushedStack: { type: "item", code: "crushed-ore-claystone", stacksize: 1 },
-			hardnessTier: 2
+			"crushedStack": { "type": "item", "code": "crushed-ore-claystone", "stacksize": 1 },
+			"hardnessTier": 2
 		},
 		"*-conglomerate": {
-			crushedStack: { type: "item", code: "crushed-ore-conglomerate", stacksize: 1 },
-			hardnessTier: 2
+			"crushedStack": { "type": "item", "code": "crushed-ore-conglomerate", "stacksize": 1 },
+			"hardnessTier": 2
 		},
 		"*-granite": {
-			"crushedStack": { type: "item", "code": "crushed-ore-granite", stacksize: 1 },
+			"crushedStack": { "type": "item", "code": "crushed-ore-granite", "stacksize": 1 },
 			"hardnessTier": 3
 		},
 		"*-limestone": {
-			crushedStack: { type: "item", code: "game:lime", stacksize: 1 },
-			hardnessTier: 1
+			"crushedStack": { "type": "item", "code": "game:lime", "stacksize": 1 },
+			"hardnessTier": 1
 		},
 		"*-chalk": {
-			crushedStack: { type: "item", code: "game:lime", stacksize: 1 },
-			hardnessTier: 1
+			"crushedStack": { "type": "item", "code": "game:lime", "stacksize": 1 },
+			"hardnessTier": 1
 		},
 		"*-peridotite": {
-			crushedStack: { type: "item", code: "game:crushed-peridotite", stacksize: 1 },
-			hardnessTier: 3
+			"crushedStack": { "type": "item", "code": "game:crushed-peridotite", "stacksize": 1 },
+			"hardnessTier": 3
 		},
 		"*-phyllite": {
-			crushedStack: { type: "item", code: "crushed-ore-phyllite", stacksize: 1 },
-			hardnessTier: 2
+			"crushedStack": { "type": "item", "code": "crushed-ore-phyllite", "stacksize": 1 },
+			"hardnessTier": 2
 		},
 		"*-sandstone": {
-			crushedStack: { type: "item", code: "crushed-ore-sandstone", stacksize: 1 },
-			hardnessTier: 2
+			"crushedStack": { "type": "item", "code": "crushed-ore-sandstone", "stacksize": 1 },
+			"hardnessTier": 2
 		},
 		"*-slate": {
-			crushedStack: { type: "item", code: "crushed-ore-slate", stacksize: 1 },
-			hardnessTier: 2
+			"crushedStack": { "type": "item", "code": "crushed-ore-slate", "stacksize": 1 },
+			"hardnessTier": 2
 		},
 		"*-shale": {
-			crushedStack: { type: "item", code: "crushed-ore-shale", stacksize: 1 },
-			hardnessTier: 2
+			"crushedStack": { "type": "item", "code": "crushed-ore-shale", "stacksize": 1 },
+			"hardnessTier": 2
 		}
 	},
 
-	creativeinventory: { "general": ["*"], "items": ["*"] },
-	maxstacksize: 64,
-	materialDensity: 500,
-	guiTransform: {
-		translation: { x: 0, y: 0, z: -10 },
-		rotation: { x: 171, y: 57, z: -20 },
+	"creativeinventory": { "general": ["*"], "items": ["*"] },
+	"maxstacksize": 64,
+	"materialDensity": 500,
+	"guiTransform": {
+		translation: { x: 0, y: 0, z: 0 },
+		rotation: { x: 171, y: 57, z: 0 },
 		origin: { x: 0.46, y: 0.11, z: 0.39 },
 		scale: 2.64
 	},
