@@ -1,39 +1,39 @@
 [
 	{
-		ingredientPattern: "LL	LL",
-		ingredients: {
-			"L": { type: "item", code: "game:lime", quantity: 1 }
+		"ingredientPattern": "LL	LL",
+		"ingredients": {
+			"L": { "type": "item", "code": "game:lime", "quantity": 1 }
 		},
-		width: 2,
-		height: 2,
-		output: { type: "block", code: "game:sand-limestone", quantity: 1 }
+		"width": 2,
+		"height": 2,
+		"output": { "type": "block", "code": "game:sand-limestone", "quantity": 1 }
 	},
 	{
-		ingredientPattern: "H	G",
-		ingredients: {
-			"G": { type: "block", code: "game:gravel-*", quantity: 1, name: "gravel", allowedVariants: ["andesite", "bauxite", "chert", "conglomerate", "claystone", "granite", "sandstone", "basalt", "peridotite", "phyllite", "slate", "shale", "limestone", "chalk"] },
-			"H": { type: "item", code: "game:hammer-*", isTool: true, toolDurabilityCost: 4 }
+		"ingredientPattern": "H	G",
+		"ingredients": {
+			"G": { "type": "block", "code": "game:gravel-*", "quantity": 1, "name": "gravel", "allowedVariants": ["andesite", "bauxite", "chert", "conglomerate", "claystone", "granite", "sandstone", "basalt", "peridotite", "phyllite", "slate", "shale", "limestone", "chalk"] },
+			"H": { "type": "item", "code": "game:hammer-*", "isTool": true, "toolDurabilityCost": 4 }
 		},
-		width: 1,
-		height: 2,
-		output: { type: "block", code: "game:sand-{gravel}", quantity: 1 }
+		"width": 1,
+		"height": 2,
+		"output": { "type": "block", "code": "game:sand-{gravel}", "quantity": 1 }
 	},
 	{
-		ingredientPattern: "CC	CC",
-		ingredients: {
-			"C": { type: "item", code: "game:crushed-*", quantity: 2, name: "crushed", allowedVariants: ["bauxite", "peridotite"] }
+		"ingredientPattern": "CC	CC",
+		"ingredients": {
+			"C": { "type": "item", "code": "game:crushed-*", "quantity": 1, "name": "crushed", "allowedVariants": ["bauxite", "peridotite"] }
 		},
-		width: 2,
-		height: 2,
-		output: { type: "block", code: "game:sand-{crushed}", quantity: 1 }
+		"width": 2,
+		"height": 2,
+		"output": { "type": "block", "code": "game:sand-{crushed}", "quantity": 1 }
 	},
 	{
-		ingredientPattern: "CC	CC",
-		ingredients: {
-			"C": { type: "item", code: "crushed-ore-*", quantity: 2, name: "crushed", allowedVariants: ["andesite", "chert", "conglomerate", "claystone", "sandstone", "basalt", "phyllite", "slate", "shale"] }
+		"ingredientPattern": "CC	CC",
+		"ingredients": {
+			"C": { "type": "item", "code": "crushed-ore-*", "quantity": 1, "name": "crushed", "allowedVariants": ["andesite", "chert", "conglomerate", "claystone", "sandstone", "basalt", "phyllite", "slate", "shale"] }
 		},
-		width: 2,
-		height: 2,
-		output: { type: "block", code: "game:sand-{crushed}", quantity: 1 }
+		"width": 2,
+		"height": 2,
+		"output": { "type": "block", "code": "game:sand-{crushed}", "quantity": 1 }
 	}
 ]
